results/SVCOMP/conversational/log-ExSymExeFNEG-2024_03_12_16_55_06.txt
class Main {

  //@ ensures \result ==> x >= 0 && test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ ensures \result ==> y <= 0;
  //@ ensures !\result ==> y > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result ==> x >= 0 && test(x);
                                    ^
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:12: error: cannot find symbol
  //@ ensures \result ==> y <= 0;
                          ^
  symbol:   variable y
  location: class Main
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:13: error: cannot find symbol
  //@ ensures !\result ==> y > 0;
                           ^
  symbol:   variable y
  location: class Main
3 errors

class Main {

  //@ ensures \result ==> x >= 0 && inst.test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: cannot find symbol
  //@ ensures \result ==> x >= 0 && inst.test(x);
                                    ^
  symbol:   variable inst
  location: class Main
1 error

class Main {

  //@ ensures \result ==> x >= 0 && test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result ==> x >= 0 && test(x);
                                    ^
1 error

class Main {

  //@ ensures \result ==> x >= 0 && new Main().test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> x >= 0 && new Main().test(x);
                                    ^
1 error

class Main {

  //@ ensures \result ==> x >= 0 && test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    Main inst = new Main();
    if (x >= 0)
      return inst.test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result ==> x >= 0 && test(x);
                                    ^
1 error

class Main {

  //@ ensures \result ==> x >= 0 && new Main().test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    if (x >= 0)
      return new Main().test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> x >= 0 && new Main().test(x);
                                    ^
1 error

class Main {

  //@ ensures \result ==> x >= 0 && test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    if (x >= 0)
      return new Main().test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result ==> x >= 0 && test(x);
                                    ^
1 error

class Main {

  //@ ensures \result ==> x >= 0 && new Main().test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    if (x >= 0)
      return new Main().test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> x >= 0 && new Main().test(x);
                                    ^
1 error

class Main {

  //@ ensures \result ==> x >= 0 && test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    if (x >= 0)
      return new Main().test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: non-static method test(float) cannot be referenced from a static context
  //@ ensures \result ==> x >= 0 && test(x);
                                    ^
1 error

class Main {

  //@ ensures \result ==> x >= 0 && new Main().test(x);
  //@ ensures !\result ==> x < 0 || x >= 0;
  public static boolean f(float x) {
    if (x >= 0)
      return new Main().test(x);
    return true;
  }

  //@ ensures \result ==> x <= 0;
  //@ ensures !\result ==> x > 0;
  public boolean test(float x) {
    System.out.println("Testing FNEG");
    float y = -x;
    if (y > 0) {
      return false;
    } else
      System.out.println("branch -x <= 0");
    return true;
  }
}
/home/max/Documents/JMLGPT/tmp/ExSymExeFNEG.java:3: error: Object allocation is not permitted in specification expressions
  //@ ensures \result ==> x >= 0 && new Main().test(x);
                                    ^
1 error

